@@ -2,54 +2,64 @@ package Service;
 
 import Model.Block;
 import Model.Transaction;
+import com.google.gson.*;
+import com.google.gson.reflect.TypeToken;
 
-import java.io.BufferedReader;
-import java.io.IOException;
-import java.io.InputStreamReader;
-import java.net.ServerSocket;
-import java.net.Socket;
-import java.net.URI;
+import java.io.*;
+import java.lang.reflect.Type;
+import java.net.*;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
+import java.util.ArrayList;
 import java.util.List;
+import java.util.Set;
+import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
-import java.util.concurrent.Future;
-import java.util.concurrent.TimeUnit;
 
 public class PeerService {
+    //==========================================Variable==========================================
+    private static final String ipAddressFilePath = "Db/IpAddresses.json";
     private static final int port = 18080;
-    private static final String seedAddress = "127.0.0.1:8080";
+    private static final String seedAddress = "127.0.0.1:18080";
     private static final HttpClient client = HttpClient.newHttpClient();
+    private static final int maxConnection = 117;
+    private static final Set<Socket> activeConnections = ConcurrentHashMap.newKeySet();
 
     public static void updateCurrNodeAddress(String address) {
 
     }
 
-    public static List<String> getPeers() {
 
-    }
 
     //======================================Api Call Support======================================
-    public static String fetchJsonOrErrorCode(String apiUrl) {
+    private static String fetchJsonFromApi(String urlString) {
         try {
-            HttpRequest request = HttpRequest.newBuilder()
-                    .uri(new URI(apiUrl))
-                    .GET()
-                    .header("Accept", "application/json")
-                    .build();
+            URL url = new URL(seedAddress + urlString);
+            HttpURLConnection conn = (HttpURLConnection) url.openConnection();
+            conn.setRequestMethod("GET");
 
-            HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
-            int statusCode = response.statusCode();
-            if (statusCode >= 200 && statusCode < 300) {
-                return response.body();
-            } else {
-                return String.valueOf(statusCode);
+            if (conn.getResponseCode() == HttpURLConnection.HTTP_OK) {
+                BufferedReader in = new BufferedReader(new InputStreamReader(conn.getInputStream()));
+                StringBuilder response = new StringBuilder();
+                String inputLine;
+
+                while ((inputLine = in.readLine()) != null) {
+                    response.append(inputLine);
+                }
+
+                in.close();
+                return response.toString();
+            }
+            else {
+                System.out.println("HTTP GET request failed. Response Code: " + conn.getResponseCode());
             }
         } catch (Exception e) {
-            return e.getMessage();
+            e.printStackTrace();
         }
+
+        return null;
     }
 
     public static boolean postJson(String apiUrl, String jsonBody) {
@@ -69,13 +79,197 @@ public class PeerService {
         }
     }
 
+
+
+    //========================================IP Addresses========================================
+    public static List<String> getGlobalIpAddresses() {
+        List<String> ipList = new ArrayList<>();
+
+        try {
+            String jsonResponse = fetchJsonFromApi("/get_nodes");
+
+            if (jsonResponse != null) {
+                JsonObject jsonObject = JsonParser.parseString(jsonResponse).getAsJsonObject();
+                JsonArray nodesArray = jsonObject.getAsJsonArray("nodes");
+
+                for (JsonElement element : nodesArray) {
+                    ipList.add(element.getAsString());
+                }
+            }
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+
+        return ipList;
+    }
+
+    public static List<String> getLocalIpAddresses() {
+        List<String> ipList = new ArrayList<>();
+        try {
+            Gson gson = new Gson();
+            FileReader reader = new FileReader(ipAddressFilePath);
+            Type listType = new TypeToken<List<String>>() {}.getType();
+            ipList = gson.fromJson(reader, listType);
+            reader.close();
+        } catch (Exception e) {
+            System.err.println("Error reading ip addresses file: " + e.getMessage());
+        }
+        return ipList;
+    }
+
+    public static void addIpToLocalFile(String newIp) {
+        try {
+            List<String> ipList = getLocalIpAddresses();
+            if (!ipList.contains(newIp)) {
+                ipList.add(newIp);
+                Gson gson = new Gson();
+                FileWriter writer = new FileWriter(ipAddressFilePath);
+                gson.toJson(ipList, writer);
+                writer.flush();
+                writer.close();
+            }
+        } catch (IOException e) {
+            System.err.println("Error writing to ip address file: " + e.getMessage());
+        }
+    }
+
+    public static boolean sendBlockToIp(String ip, Block block) {
+        try (Socket socket = new Socket()) {
+            // Thiết lập timeout kết nối
+            socket.connect(new InetSocketAddress(ip, 8333), 3000); // timeout 3s
+
+            // Gửi block dưới dạng JSON
+            OutputStream outputStream = socket.getOutputStream();
+            BufferedWriter writer = new BufferedWriter(new OutputStreamWriter(outputStream));
+            String blockJson = new Gson().toJson(block);
+            writer.write(blockJson);
+            writer.newLine(); // kết thúc dòng để phía nhận biết
+            writer.flush();
+
+            // Đọc phản hồi (nếu cần)
+            BufferedReader reader = new BufferedReader(new InputStreamReader(socket.getInputStream()));
+            String response = reader.readLine();
+            return "OK".equalsIgnoreCase(response);
+
+        } catch (IOException e) {
+            System.err.println("Socket error with " + ip + ": " + e.getMessage());
+            return false;
+        }
+    }
+
+    public static void listenForConnections() {
+        try (ServerSocket serverSocket = new ServerSocket(port)) {
+            System.out.println("Listening port: " + port + "...");
+
+            while (true) {
+                Socket clientSocket = serverSocket.accept();
+
+                if (activeConnections.size() >= maxConnection) {
+                    // Quá nhiều kết nối, trả về thông báo từ chối
+                    try (OutputStream out = clientSocket.getOutputStream()) {
+                        out.write("Too many connections. Try again later.".getBytes());
+                    } catch (IOException ignored) {}
+                    clientSocket.close();
+                    continue;
+                }
+
+                // Thêm kết nối vào danh sách đang hoạt động
+                activeConnections.add(clientSocket);
+                System.out.println("Connected to: " + clientSocket.getRemoteSocketAddress());
+
+                // Tạo luồng riêng cho mỗi kết nối
+                new Thread(() -> handleClient(clientSocket)).start();
+            }
+
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+    }
+
+    private static void handleClient(Socket clientSocket) {
+        try (Socket socket = clientSocket;
+             BufferedReader in = new BufferedReader(new InputStreamReader(socket.getInputStream()));
+             OutputStream out = socket.getOutputStream()) {
+
+            // Đọc và xử lý dữ liệu (ví dụ đơn giản)
+            String line;
+            while ((line = in.readLine()) != null) {
+                System.out.println("Nhận được từ " + socket.getRemoteSocketAddress() + ": " + line);
+                out.write(("Echo: " + line + "\n").getBytes());
+            }
+
+        } catch (IOException e) {
+            System.out.println("Ngắt kết nối với: " + clientSocket.getRemoteSocketAddress());
+        } finally {
+            activeConnections.remove(clientSocket);
+        }
+    }
+
+
+
+    //============================================Node============================================
+    public static boolean performHandshake(String ip, int port) {
+        try (Socket socket = new Socket(ip, port);
+             DataOutputStream out = new DataOutputStream(socket.getOutputStream());
+             DataInputStream in = new DataInputStream(socket.getInputStream())) {
+
+            // Gửi message "version"
+            String versionMsg = "{ \"type\": \"version\", \"protocol\": 70015 }";
+            out.writeUTF(versionMsg);
+
+            // Nhận message "verack"
+            String response = in.readUTF();
+            if (response.contains("verack")) {
+                System.out.println("Successfully handshake with " + ip);
+                return true;
+            }
+
+        } catch (IOException e) {
+            System.err.println("Can't connect to " + ip + ": " + e.getMessage());
+        }
+        return false;
+    }
+
+
+
+    //=========================================Broadcast==========================================
     public static void broadcastBlock(Block block) {
+        List<String> ipAddresses = getLocalIpAddresses();
+        int connectedCount = 0;
+
+        for (String address : ipAddresses) {
+            boolean connected = sendBlockToIp(address, block);
+
+            if (!connected) removeIpFromLocalFile(address);
+            connectedCount++;
+
+            if (connectedCount >= 8) return;
+        }
+
+        List<String> globalIpAddresses = getGlobalIpAddresses();
+        for (String address : globalIpAddresses) {
+            // Bỏ qua địa chỉ đã có trong danh sách local
+            if (ipAddresses.contains(address)) continue;
+
+            boolean connected = sendBlockToIp(address, block);
+            if (connected) {
+                connectedCount++;
+
+                // Thêm vào file lưu IP local nếu kết nối thành công
+                addIpToLocalFile(address);
+            }
+
+            if (connectedCount >= 8) break; // Đủ rồi thì thoát
+        }
     }
 
     public static void broadcastTransaction(Transaction transaction) {
 
     }
 
+
+
+    //===========================================Listen===========================================
     public static void listen4NewTransaction() throws IOException {
         ServerSocket serverSocket = new ServerSocket(port);
         ExecutorService threadPool = Executors.newCachedThreadPool();
@@ -112,7 +306,7 @@ public class PeerService {
     }
 
     private static boolean handleReceivedJson(String json) {
-        // Check json format if Block or Transaction and handle it
+        // Check json format if Block or Transaction then handle it
         return true;
     }
 }
